test2-2023-05-27.log
regress/test2.fir:247424:17: error: use of unknown declaration 'validif'
    tmp20070 <= validif(head(UInt<3>(6), 1), SInt<24>("b-11111101000010001010101"))
                ^
===-------------------------------------------------------------------------===
                         ... Execution time report ...
===-------------------------------------------------------------------------===
  Total Execution Time: 1.4453 seconds

  ----Wall Time----  ----Name----
    1.4427 ( 99.8%)  FIR Parser
    0.0000 (  0.0%)    Parse annotations
    0.0000 (  0.0%)    Parse OMIR
    1.3626 ( 94.3%)    Parse modules
    0.0026 (  0.2%)  Rest
    1.4453 (100.0%)  Total

{
  totalTime: 1.463,
  maxMemory: 171577344
}
